# SoulOverlay

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.tester.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  app_setup.rs  cache_store.rs  config.rs  constants.rs  database.rs  game_tracker.rs  hotkey.rs  image_proxy.rs  lib.rs  log_watcher.rs  logging.rs  main.rs  platform.rs  process_tracker.rs  settings.rs  state.rs  tray.rs  uex_client.rs  window.rs
src-tauri/src/commands/: api.rs  backend.rs  cache.rs  contested_zones.rs  debug.rs  favorites.rs  hangar.rs  inventory.rs  mod.rs  orgs.rs  overlay.rs  settings.rs  uex.rs  updates.rs  user.rs  watchlist.rs  wikelo.rs  wiki.rs
src-tauri/src/hotkey/: keymap.rs  mod.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/providers/commodities/: dto.rs  mod.rs  provider.rs
src-tauri/src/providers/contested_zones/: mod.rs  scraper.rs  types.rs
src-tauri/src/providers/entity_info/: provider.rs
src-tauri/src/providers/fleet/: dto.rs  mod.rs  provider.rs
src-tauri/src/providers/fuel/: dto.rs  provider.rs
src-tauri/src/providers/items/: dto.rs  mod.rs  provider.rs
src-tauri/src/uex/: client.rs  commodities.rs  fleet.rs  fuel.rs  items.rs  locations.rs  mod.rs  types.rs  user.rs  vehicles.rs
src-tauri/src/wiki/: client.rs  dto.rs  mapper.rs  mod.rs  types.rs
(+133 files in other folders)
