[package]
name = "soul-overlay"
version = "0.1.0"
edition = "2021"

[lib]
name = "soul_overlay_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
notify = "6"
log = "0.4"
fern = "0.7"
chrono = "0.4"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
rmp-serde = "1"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Accessibility",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
] }
